--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@tanstack/react-query": "^5.60.5",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.4",
-    "zod": "^3.23.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-icons": "^5.4.0",
-    "react-hook-form": "^7.53.1"
+    "tailwind-merge": "^2.5.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "typescript": "^5.0.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.0.0",
     "eslint-plugin-react": "^7.0.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0"
+    "typescript": "^5.0.0",
+    "vite": "^5.4.15"
   }
 }
