--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simosa-frontend",
+  "name": "kairos-frontend",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,23 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.60.5",
-    "clsx": "^2.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.1",
-    "react-icons": "^5.4.0",
-    "tailwind-merge": "^2.5.4",
-    "zod": "^3.23.8"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^8.0.0",
-    "eslint-plugin-react": "^7.0.0",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.4.15"
+    "vite": "^5.0.0",
+    "typescript": "^5.3.3",
+    "@vitejs/plugin-react": "^4.3.2"
   }
 }
