--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "vite": "^5.0.0",
-    "typescript": "^5.3.3",
-    "@vitejs/plugin-react": "^4.3.2"
+    "@vitejs/plugin-react": "^4.3.2",
+    "typescript": "^5.3.3"
   }
 }
